# versioned

.github/workflows/: cpp_b2.yml  cpp_cmake.yml  rust.yml  swift.yml
c/include/: versioned.h
cpp/: .gitignore  CMakeLists.txt  build.jam
cpp/docs/: build.jam  example_semver_ctor.cpp  example_semver_ctor.out.txt  example_semver_to_string.cpp  example_semver_to_string.out.txt  reference.adoc  versioned.adoc  versioned.html
cpp/include/versioned/: versioned.hpp
cpp/test/: CMakeLists.txt  basic_run_test.cpp  build.jam  detail_run_test.cpp  detail_time_test.cpp  prerelease_version_run_test.cpp  semver_run_test.cpp  version_core_run_test.cpp  version_tag_run_test.cpp
cpp/test/ext_boost_core/include/boost/core/: lightweight_test.hpp
rust/: Cargo.toml
rust/src/: lib.rs
swift/: Package.swift
swift/Sources/versioned/: versioned.swift
swift/Tests/versionedTests/: versionedTests.swift
